--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@ title: Japheth Crawford
 
 <div id="home">
   <h1>Blog Posts</h1>
+  
+    
+  <ul class="posts">
+{% assign count = 0 %}
+{% for post in site.posts %}
+  {% if post.tags contains 'Favorite Thing on the Web' %}
+    {% if count < 20 %}
+      {% assign count = count|plus:1 %}
+      <div class="post_info">
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <span>({{ post.date | date:"%Y-%m-%d" }})</span>
+        </li>
+      </div>
+    {% endif %}
+  {% endif %}
+{% endfor %}
+</ul>
+
+  
   <!--
 <ul class="posts">
     {% for post in site.posts %}
