--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Japheth Crawford
   <ul class="posts">
 {% assign count = 0 %}
 {% for post in site.posts %}
-  {% if post.tags contains 'Favorite Thing on the Web' %}
+  {% if post.tags contains 'Favorite Things on the Web' %}
     {% if count < 20 %}
       {% assign count = count|plus:1 %}
       <div class="post_info">
