--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Japheth Crawford
       <div class="post_info">
         <li>
           <a href="{{ post.url }}">{{ post.title }}</a>
-          <span>({{ post.date | date:"%Y-%m-%d" }})</span>
+          <span>({{ post.date |  date_to_string }})</span>
         </li>
       </div>
     {% endif %}
