--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Japheth Crawford
       {% assign count = count|plus:1 %}
       <div class="post_info">
         <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
+          <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
           <span>({{ post.date |  date_to_string }})</span>
         </li>
       </div>
